# mnm-workshop

./: .env.example  AGENTS.md  CLAUDE.md  README.md  WORKSHOP_ARCHETYPES.md  main.py  pyproject.toml
.agents/skills/mnms-guide/: SKILL.md
.agents/skills/mnms-guide/references/: reading-results.md  the-argument.md
.claude/skills/mnms-guide/: SKILL.md
.claude/skills/mnms-guide/references/: authoring-skills.md  reading-results.md  running-branches.md  the-argument.md
bt_scoring/: .gitignore  README.md  bt_fit.py  judge.py  main.py  pyproject.toml  transcribe.py  viz.py
corpus_coding/: README.md  llm.py  main.py  pyproject.toml  schema.py  scoring.py  viz.py
corpus_coding/output/: agreement.csv  consistency.csv  cost_by_model.csv  report.html  results.jsonl
corpus_coding/output/viz/: agreement_bars.html  answer_distributions.html  consistency_bars.html  consistency_heatmap.html  cost_bars.html  index.html  pairwise_heatmap.html  token_bars.html
data_acquisition/: README.md  common.py  fetch_arxiv_metadata.py  fetch_nsf_awards.py  fetch_pmc_oa.py  fetch_presidential_audio.py  fetch_sotu.py  pyproject.toml
envs/: README.md
envs/claude-code/: README.md  flake.nix
envs/codex-cli/: README.md  config.toml  flake.nix
envs/opencode/: README.md  flake.nix  opencode.json
envs/pi/: .gitignore  README.md  flake.nix  models.json  settings.json
meta/: pyproject.toml
structure_analysis/: README.md  cluster.py  data.py  extract.py  llm.py  main.py  pyproject.toml  schema.py  viz.py
transcription/: main.py  pyproject.toml
