[project]
name = "mnms"
version = "0.1.0"
description = "Runnable case studies for a workshop on agentic tooling for academic researchers"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.11.0",
    "torchcodec>=0.11.1",
]

[tool.uv.workspace]
members = [
    "transcription",
    "data_acquisition",
    "corpus_coding",
    "structure_analysis",
    "bt_scoring",
]
