[project]
name = "bt_scoring"
version = "0.1.0"
description = "Pairwise LLM-as-judge over a corpus -> Bradley-Terry latent scale with SEs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "choix>=0.3.5",
    "plotly>=5.20",
]
