[project]
name = "corpus_coding"
version = "0.1.0"
description = "Multi-model codebook coding of a document corpus + inter-model agreement"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "krippendorff>=0.6",
    "tiktoken>=0.7",
    "jinja2>=3.1",
    "plotly>=5.20",
]
