[project]
name = "transcription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "python-dotenv>=1.2.2",
    "soundfile>=0.13.1",
    "torchaudio>=2.11.0",
    "transformers>=5.8",
]
